# goassignrr

./: README.md  manage.py  pyproject.toml  requirements.txt  robots.txt
assignment/: sitemap.py  urls.py  views.py
assignment_generator/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: content_style.css  style.css
static/js/: ajax.js
templates/: base.html  index.html  no_content.html
templates/assignments/: generate_assignment.html
templates/essay/: generate_essay.html
